Fixed overflow

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,7 @@
   background: linear-gradient(180deg, #0c0c1d, #111132);
   height: 100%;
   width: 100%;
-
+  overflow: hidden;
 
 
   .wrapper {
